--- a/themes/TechBlog/layouts/authors/list.html
+++ b/themes/TechBlog/layouts/authors/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<div class="flex flex-wrap gap-7">
+<div class="flex flex-wrap justify-center gap-10">
   {{range where $.Site.RegularPages "Section" "authors" }} {{ partial
   "components/author-preview-big.html" . }}{{ end }}
 </div>
