--- a/themes/TechBlog/layouts/partials/components/logo.html
+++ b/themes/TechBlog/layouts/partials/components/logo.html
@@ -6,6 +6,7 @@
     <img
       src="/img/logo-globe.svg"
       class="w-12 h-12 md:w-16 md:h-16 stroke-sky-500"
+      alt="{{$.Site.Title}} Logo"
     />
   </div>
   <div class="flex flex-col">
