--- a/themes/TechBlog/layouts/partials/components/logo-small-white.html
+++ b/themes/TechBlog/layouts/partials/components/logo-small-white.html
@@ -2,7 +2,11 @@
   href="/"
   class="flex flex-col items-center gap-3 text-center md:text-left md:flex-row"
 >
-  <img src="/img/logo-globe.svg" class="w-10 h-10 stroke-sky-500" />
+  <img
+    src="/img/logo-globe.svg"
+    class="w-10 h-10 stroke-sky-500"
+    alt="{{$.Site.Title}} Logo"
+  />
   <div class="flex flex-col">
     <h3 class="text-xl font-semibold text-slate-50 dark:text-slate-100">
       {{.Site.Title}}
