--- a/themes/TechBlog/layouts/partials/blog-page/share-btns.html
+++ b/themes/TechBlog/layouts/partials/blog-page/share-btns.html
@@ -12,6 +12,7 @@ strings.TrimPrefix "=" (querify "" (.Summary | truncate 200)) }}
       <a
         href="https://www.facebook.com/sharer.php?u={{ $url }}&t={{ .Title }}"
         target="_blank"
+        aria-label="Facebook"
         ><svg
           height="50"
           viewBox="0 0 50 50"
@@ -34,6 +35,7 @@ strings.TrimPrefix "=" (querify "" (.Summary | truncate 200)) }}
       <a
         href="https://twitter.com/share?text={{ .Title }}&url={{ $url }}"
         target="_blank"
+        aria-label="Twitter"
         ><svg
           height="50"
           viewBox="0 0 50 50"
@@ -56,6 +58,7 @@ strings.TrimPrefix "=" (querify "" (.Summary | truncate 200)) }}
       <a
         href="https://www.linkedin.com/shareArticle?mini=true&url={{ $url }}&title={{ .Title }}&summary={{ $encodedSummary }}"
         target="_blank"
+        aria-label="LinkedIn"
         ><svg
           height="51"
           viewBox="0 0 50 51"
@@ -75,7 +78,10 @@ strings.TrimPrefix "=" (querify "" (.Summary | truncate 200)) }}
     </li>
     {{ end }} {{ if $switches.whatsapp }}
     <li>
-      <a href="whatsapp://send?text={{ $textBody }}" target="_blank"
+      <a
+        href="whatsapp://send?text={{ $textBody }}"
+        target="_blank"
+        aria-label="WhatsApp"
         ><svg
           height="50"
           viewBox="0 0 50 50"
@@ -98,6 +104,7 @@ strings.TrimPrefix "=" (querify "" (.Summary | truncate 200)) }}
       <a
         href="https://www.xing.com/social_plugins/share/new?sc_p=xing-share&h=1&url={{ $url }}"
         target="_blank"
+        aria-label="Xing"
         ><svg
           height="50"
           viewBox="0 0 50 50"
@@ -119,6 +126,7 @@ strings.TrimPrefix "=" (querify "" (.Summary | truncate 200)) }}
     <li>
       <a
         href="mailto:?subject={{ .Title }}&body={{ $textBody }}"
+        aria-label="E-Mail"
         target="_blank"
         ><svg
           height="50"
