Font Speed Optim

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,6 +78,7 @@ p {
       format("truetype"),
     /* Safari, Android, iOS */ url("/fonts/poppins-v20-latin-300.svg#Poppins")
       format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* poppins-300italic - latin */
@@ -97,6 +98,7 @@ p {
       format("truetype"),
     /* Safari, Android, iOS */
       url("/fonts/poppins-v20-latin-300italic.svg#Poppins") format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* poppins-regular - latin */
@@ -115,6 +117,8 @@ p {
       format("truetype"),
     /* Safari, Android, iOS */
       url("/fonts/poppins-v20-latin-regular.svg#Poppins") format("svg"); /* Legacy iOS */
+
+  font-display: swap;
 }
 
 /* poppins-500 - latin */
@@ -132,6 +136,7 @@ p {
       format("truetype"),
     /* Safari, Android, iOS */ url("/fonts/poppins-v20-latin-500.svg#Poppins")
       format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* poppins-italic - latin */
@@ -150,6 +155,7 @@ p {
       format("truetype"),
     /* Safari, Android, iOS */
       url("/fonts/poppins-v20-latin-italic.svg#Poppins") format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* poppins-500italic - latin */
@@ -169,6 +175,7 @@ p {
       format("truetype"),
     /* Safari, Android, iOS */
       url("/fonts/poppins-v20-latin-500italic.svg#Poppins") format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* poppins-600 - latin */
@@ -186,6 +193,7 @@ p {
       format("truetype"),
     /* Safari, Android, iOS */ url("/fonts/poppins-v20-latin-600.svg#Poppins")
       format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* poppins-600italic - latin */
@@ -205,6 +213,8 @@ p {
       format("truetype"),
     /* Safari, Android, iOS */
       url("/fonts/poppins-v20-latin-600italic.svg#Poppins") format("svg"); /* Legacy iOS */
+
+  font-display: swap;
 }
 
 /* poppins-700 - latin */
@@ -222,6 +232,8 @@ p {
       format("truetype"),
     /* Safari, Android, iOS */ url("/fonts/poppins-v20-latin-700.svg#Poppins")
       format("svg"); /* Legacy iOS */
+
+  font-display: swap;
 }
 
 /* poppins-700italic - latin */
@@ -241,4 +253,6 @@ p {
       format("truetype"),
     /* Safari, Android, iOS */
       url("/fonts/poppins-v20-latin-700italic.svg#Poppins") format("svg"); /* Legacy iOS */
+
+  font-display: swap;
 }
