--- a/themes/TechBlog/layouts/partials/head.html
+++ b/themes/TechBlog/layouts/partials/head.html
@@ -48,6 +48,9 @@
   <meta name="keywords" content="{{ range .Params.tags }}{{.}},  {{end}}" />
   {{- end }}
 
+  <!-- Font Preload -->
+  <link rel="preload" as="font" />
+
   <!-- FAVICON -->
 
   <link
