--- a/themes/TechBlog/layouts/partials/components/logo-small-white.html
+++ b/themes/TechBlog/layouts/partials/components/logo-small-white.html
@@ -3,7 +3,7 @@
   class="flex flex-col items-center gap-3 text-center md:text-left md:flex-row"
 >
   <img
-    src="/img/logo-globe.svg"
+    src="/img/logo.svg"
     class="w-10 h-10 stroke-sky-500"
     alt="{{$.Site.Title}} Logo"
   />
