--- a/themes/TechBlog/layouts/partials/components/logo.html
+++ b/themes/TechBlog/layouts/partials/components/logo.html
@@ -4,7 +4,7 @@
 >
   <div class="">
     <img
-      src="/img/logo-globe.svg"
+      src="/img/logo.svg"
       class="w-12 h-12 md:w-16 md:h-16 stroke-sky-500"
       alt="{{$.Site.Title}} Logo"
     />
