--- a/themes/TechBlog/layouts/partials/components/logo.html
+++ b/themes/TechBlog/layouts/partials/components/logo.html
@@ -11,7 +11,7 @@
   </div>
   <div class="flex flex-col">
     <h1
-      class="text-3xl font-semibold md:text-5xl text-slate-900 dark:text-slate-100"
+      class="text-3xl italic font-bold uppercase md:text-5xl text-slate-900 dark:text-slate-100"
     >
       {{.Site.Title}}
     </h1>
