--- a/themes/TechBlog/layouts/partials/components/logo-small-white.html
+++ b/themes/TechBlog/layouts/partials/components/logo-small-white.html
@@ -8,7 +8,9 @@
     alt="{{$.Site.Title}} Logo"
   />
   <div class="flex flex-col">
-    <h3 class="text-xl font-semibold text-slate-50 dark:text-slate-100">
+    <h3
+      class="text-xl italic font-bold uppercase text-slate-50 dark:text-slate-100"
+    >
       {{.Site.Title}}
     </h3>
     <span class="text-slate-200 dark:text-slate-300"
